--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 html {
     height: 100%;
+    overflow: hidden;
 }
 
 body {
     background-size: cover;
     height: 100%;
 }
+
